--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ p {
 }
 
 .container {
-  width: 75%;
+  width:1280px;
   margin: 0 auto;
 }
 
@@ -54,6 +54,7 @@ p {
 
 
 /* Css Components Design */
+/*-------------------------- Navber Design Start --------------------------*/
 .nav_main {
     margin: 24px 0px;
   display: flex;
@@ -92,6 +93,8 @@ p {
     -ms-transition: 0.6s;
     -o-transition: 0.6s;
 }
+/*-------------------------- Navber Design End --------------------------*/
+/*-------------------------- Hero Design Start --------------------------*/
 .hero_main{
     margin: 20px 0px 80px 0px;
     padding:80px 59px;
@@ -152,6 +155,8 @@ p {
 .hero_main .hero_right img{
     max-width:474px;
 }
+/*-------------------------- Hero Design End --------------------------*/
+/*-------------------------- Pillars Design Start --------------------------*/
 .pillars_main{
     display: flex;
     justify-content: space-between;
@@ -188,6 +193,8 @@ p {
 .pillars .pillar_title{
     padding-bottom: 32px;
 }
+/*------------------------- Pillars Design End -------------------------*/
+/*------------------------- Vision Design Start -------------------------*/
 .vision{
     margin: 80px 0px;
 }
@@ -292,6 +299,60 @@ p {
     line-height: 24px;
     color: rgba(14, 14, 14, 0.8);
 }
+/*-------------------------- Vision Design End --------------------------*/
+/*-------------------------- Opinion Design Start --------------------------*/
+.Opinion h2{
+    padding-bottom: 24px;
+}
+.opinion_content{
+    padding: 32px;
+    background-color: white;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+.opinion_colum{
+    display:flex;
+    justify-content:space-between;
+    padding: 24px;
+    background-color: #C6E4D6;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    color: rgb(14, 14, 14);
+}
+.opinion_colum_1{
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    color: rgb(14, 14, 14);
+}
+.opinion_colum_1 .opinion_colum_left{
+    width: 80%;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    padding: 24px 0px 24px 36px;
+}
+.opinion_colum_1 .opinion_colum_right{
+    width: 20%;
+    border: 1px solid red;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-left: 0px;
+    padding: 24px 0px 24px 36px;
+}
+.opinion_colum_1 .opinion_colum_right select{
+    padding: 12px 16px;
+    background-color: #C6E4D6;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    color: rgb(14, 14, 14);
+}
+/*-------------------------- Opinion Design End --------------------------*/
+/*-------------------------- News Design Start --------------------------*/
 .news_header{
     margin-bottom: 32px;
 }
@@ -380,6 +441,8 @@ p {
     -ms-transition: 0.6s;
     -o-transition: 0.6s;
 }
+/*-------------------------- News Design End --------------------------*/
+/*-------------------------- Donate Design Start --------------------------*/
 .donate{
     margin: 80px 0px;
     text-align: center;
@@ -481,6 +544,8 @@ p {
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
 }
+/*-------------------------- Donate Design End --------------------------*/
+/*-------------------------- Subscrib Design Start --------------------------*/
 .subscrib{
     padding-bottom: 80px;
 }
@@ -568,6 +633,8 @@ p {
     margin: 0 auto;
 
 }
+/*-------------------------- Subscrib Design End --------------------------*/
+/*-------------------------- Footer Design Start --------------------------*/
 .footer{
     background-color: white;
     padding: 50px 0px;
@@ -587,4 +654,5 @@ p {
 .footer_bottom img{
     width: 24px;
 }
-/* Css Components Design */
+/*-------------------------- Footer Design End --------------------------*/
+/*-------------------------- Css Components Design --------------------------*/
